<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Realtime Monitor</string>
    <string name="btn_start">Start Streaming</string>
    <string name="btn_stop">Stop Streaming</string>
    <string name="status_initializing">Initializing camera…</string>
    <string name="status_ready">Camera ready. Tap Start to begin streaming.</string>
    <string name="status_streaming">Streaming…</string>
    <string name="status_stopped">Stopped. Tap Start to begin streaming.</string>
    <string name="permission_denied">Camera and microphone permissions are required</string>
    <string name="btn_show_link">Show link</string>
    <string name="dialog_stream_url_title">Connect to stream</string>
    <string name="dialog_stream_url_hint">Scan the QR code or open this URL in your browser:</string>
    <string name="btn_copy_url">Copy URL</string>
    <string name="url_copied">URL copied to clipboard</string>
    <string name="start_streaming_first">Start streaming first to get the link</string>
    <string name="qr_code_content_description">QR code to connect to stream</string>
    <string name="status_wifi_direct_creating">Creating Wi‑Fi Direct…</string>
    <string name="status_streaming_p2p">Streaming (Wi‑Fi Direct)…</string>
    <string name="wifi_direct_failed">Wi‑Fi Direct failed. Enable Wi‑Fi or try again.</string>
    <string name="dialog_p2p_hint">On the viewer device: connect to this phone’s Wi‑Fi Direct network in Settings first, then open the URL above.</string>
    <string name="dialog_p2p_password">Wi‑Fi password: %1$s</string>
</resources>
